--- a/css/general.css
+++ b/css/general.css
@@ -36,45 +36,20 @@ body {
 
 h1 {
     font-family: Rockwell, "Times New Roman", Serif;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     font-weight: 200;
-    background-color: white;
+    background-color: #ffffff;
     border: solid;
     overflow: hidden;
+    padding: 32px 0px 32px 9px;
 }
 
 h2 {
+    padding: 1.5rem;
     font-family:Rockwell, "Times New Roman", Serif;
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 200;
     border-style: groove;
-}
-
-p {
-    border: 0 0 2rem;
-    text-align: justify;
-    margin: 5px;
-    line-height:1.5;
-}
-
-em {
-    color:white
-}
-
-strong {
-    font-family: "Bodoni MT", "Big Caslon", Serif
-}
-.masthead {
-    background:green;
-    overflow: hidden;
-    border-bottom:solid;
-    border-style:dotted
-}
-
-.logo {
-    height: 8rem;
-    width: auto;
-    margin: 4rem 5%;
 }
 
 article {
@@ -83,17 +58,46 @@ article {
     overflow: hidden;
 }
 
-footer {
-    background-color: green;
+p {
+    text-align: justify;
+    margin: 8px;
+    line-height: 1.5;
+}
+
+em {
+    color: #ffffff;
+}
+
+strong {
+    font-family: "Bodoni MT", "Big Caslon", Serif
+}
+
+.masthead {
+    background: #009900;
     overflow: hidden;
+    border-bottom: solid;
+    border-style: dotted
+}
+
+.logo {
+    height: 8rem;
+    width: auto;
+    margin: 4rem 5%;
+}
+
+footer {
+    background-color: #009900;
+    overflow: hidden;
+    border-style: dotted;
 }
 
 footer a {
-    color: yellow;
+    color: #ffff33;
 }
 
 footer p {
-    margin: .5rem 5% 5rem;
+    margin: 1rem 4% 5rem;
+    padding: 1rem 0 0;
 }
 
 figcaption {
@@ -102,7 +106,6 @@ figcaption {
 }
 
 figure {
-    background-color: green;
-    overflow: hidden;
+    background-color: #009900;
+    overflow: hidden;    
 }
-    
